feat: Add new pages and components for landing, belajar, latihan, and quiz
This commit adds new files and components for the landing, belajar, latihan, and quiz pages. It includes the following changes:

- Added a new page component for the landing page
- Created a layout component for the landing page
- Added a menu component for the landing page
- Created page components for belajar, latihan, and quiz
- Added partial components for belajar, latihan, and quiz pages
- Updated the package.json file to include new dependencies

--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS=\"--max_old_space_size=2048\" next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
