--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       "@public/*": [
         "./public/*"
       ],
+      "@types/*": [
+        "./types/*"
+      ],
       "@test/*": [
         "./test/*"
       ]
